# KiCad-draw

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  format.yml  publish.yml  pytest.yml  test-build.yml
docs/: README.md  api.rst  changelog.md  conf.py  dev.md  examples.md  generate_examples.py  index.rst  kicad_draw.rst  quickstart.md  requirements.txt  tutorial.rst  usage.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  install.doctree  kicad_draw.doctree  usage.doctree
docs/_build/doctrees/apis/: kicad_draw.doctree  modules.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  install.html  kicad_draw.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  install.rst.txt  usage.rst.txt
docs/_build/html/_sources/apis/: modules.rst.txt
docs/_build/html/apis/: kicad_draw.html  modules.html
docs/source/: conf.py  index.rst
examples/: kicad_helix_coil.ipynb
examples/assets/: asset.kicad_pcb  template.kicad_pro
examples/footprint/: output.kicad_mod
examples/notebooks/: kicad_helix_coil.ipynb  kicad_helix_rect_coil.ipynb
examples/notebooks/output/: rectangular_helix_coil.txt
kicad_coil_maker/: kicad_draw.py
kicad_coil_maker/template/: 2layer_coil_template.kicad_mod
kicad_draw/: PCBmodule.py  __init__.py  cli.py  config.py  constants.py  formatter.py  geometry.py  layers.py  models.py  modules.py  visualizer.py
tests/: __init__.py  test_PCBdraw.py  test_pcbmodule.py
tests/test_output/: helix_coil_out.txt
