[project]
name = "kicad-draw"
version = "0.2.1"
description = "Python module for generating traces for KiCad PCB."
authors = [{ name = "t-sasatani", email = "sasatani.dev@gmail.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
dependencies = [
    "numpy>=1.25.2,<2",
    "black[jupyter]>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "ruff>=0.11.6,<0.12",
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "ipykernel>=6.29.5,<7",
    "sphinx>=8.1.3,<9",
    "sphinx_rtd_theme>=3.0.2,<4",
    "myst-parser>=4.0.1,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5,<7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "D",
]
ignore = [
    "E501",  # Ignore line length errors, handled by Black
    "D200",  # Ignore One-line docstring should be in one line
    "D205",  # Ignore blank line required between summary line and description
    "D212",  # Ignore multi-line docstring summary should start at the first line
    "D213",  # Ignore multi-line docstring summary should start at the second line
    "C901",  # Ignore function is too complex, to be removed in the future
    "D203",  # Ignore 1 blank line required before class docstring
    "D401",  # Ignore first line should be in imperative mood
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=kicad_draw",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]