[project]
name = "kicad-draw"
dynamic = ["version"]
description = "Python module for generating traces for KiCad PCB."
authors = [{ name = "t-sasatani", email = "sasatani.dev@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "numpy>=1.25.2,<2",
    "pydantic>=2.0.0,<3",
    "black[jupyter]>=25.1.0,<26",
    "isort>=6.0.1,<7",
    "ruff>=0.11.6,<0.12",
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "ipykernel>=6.29.5,<7",
    "sphinx>=8.1.3,<9",
    "sphinx_rtd_theme>=3.0.2,<4",
    "myst-parser>=4.0.1,<5",
    "click>=8.1.7,<9",
]

[project.scripts]
kicad-draw = "kicad_draw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
    "build>=1.0.0,<2",
]
docs = [
    "sphinx>=8.1.3,<9",
    "sphinx_rtd_theme>=3.0.2,<4",
    "myst-parser>=4.0.1,<5",
]
viz = [
    "matplotlib>=3.5.0,<4",
]

[dependency-groups]
dev = [
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
    "ipykernel>=6.29.5,<7",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "C",
    "D",
]
ignore = [
    "E501",  # Ignore line length errors, handled by Black
    "D200",  # Ignore One-line docstring should be in one line
    "D205",  # Ignore blank line required between summary line and description
    "D212",  # Ignore multi-line docstring summary should start at the first line
    "D213",  # Ignore multi-line docstring summary should start at the second line
    "C901",  # Ignore function is too complex, to be removed in the future
    "D203",  # Ignore 1 blank line required before class docstring
    "D401",  # Ignore first line should be in imperative mood
]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--cov=kicad_draw",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["kicad_draw"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version", tag_regex = "^v(?P<version>[0-9]+\\.[2-9]+.*|[1-9]+\\..*)$" }
